updated portfolio design

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#"><h1 class="site-title">Timeline</h1></a>
       </div>
       <ul class="menu-list">
-        <li><a href="./index.html">Home</a></li>
+        <li><a href="#home">Home</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./projects.html">Projects</a></li>
         <li><a href="./contact.html">Contact</a></li>
